# models/favoriteModel.js
@@ -3,24 +3,23 @@ const db = require("../config/db");
 const addFavoriteCourse = async (userId, courseData) => {
   const query = `
     INSERT INTO favorite_courses 
-    (user_id, course_id, course_title, course_url, category, interest)
-    VALUES (?, ?, ?, ?, ?, ?)
+    (user_id, title, short_intro, url, predicted_category)
+    VALUES (?, ?, ?, ?, ?)
   `;
 
   await db.query(query, [
     userId,
-    courseData.id.toString(),
     courseData.title,
+    courseData.short_intro,
     courseData.url,
-    courseData.category,
-    courseData.interest,
+    courseData.predicted_category,
   ]);
 };
 
-const removeFavoriteCourse = async (userId, courseId) => {
+const removeFavoriteCourse = async (userId, title) => {
   await db.query(
-    "DELETE FROM favorite_courses WHERE user_id = ? AND course_id = ?",
-    [userId, courseId]
+    "DELETE FROM favorite_courses WHERE user_id = ? AND title = ?",
+    [userId, title]
   );
 };
 
@@ -32,10 +31,10 @@ const getFavoriteCourses = async (userId) => {
   return rows;
 };
 
-const checkFavoriteCourse = async (userId, courseId) => {
+const checkFavoriteCourse = async (userId, title) => {
   const [rows] = await db.query(
-    "SELECT * FROM favorite_courses WHERE user_id = ? AND course_id = ?",
-    [userId, courseId]
+    "SELECT * FROM favorite_courses WHERE user_id = ? AND title = ?",
+    [userId, title]
   );
   return rows.length > 0;
 };
