# routes/authRoutes.js
@@ -1,9 +1,16 @@
 const express = require("express");
-const { register, login } = require("../controllers/authController");
+const {
+  register,
+  login,
+  forgotPassword,
+  resetPassword,
+} = require("../controllers/authController");
 
 const router = express.Router();
 
-router.post("/register", register); // Menggunakan username, email, dan password
-router.post("/login", login); // Menggunakan username dan password
+router.post("/register", register);
+router.post("/login", login);
+router.post("/forgot-password", forgotPassword);
+router.post("/reset-password", resetPassword);
 
 module.exports = router;
