# server.js
@@ -30,10 +30,8 @@ app.get("/", (req, res) => {
   });
 });
 
-// Pindahkan Swagger UI ke /api-docs
 app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
-// API routes
 app.use("/api/auth", authRoutes);
 app.use("/api/profile", profileRoutes);
 app.use("/api/favorites", favoriteRoutes);
@@ -42,16 +40,14 @@ app.get("/protected", require("./middlewares/authMiddleware"), (req, res) => {
   res.json({ message: "This is a protected route", user: req.user });
 });
 
-// Handle 404
 app.use((req, res) => {
   res.status(404).json({ error: "Route not found" });
 });
 
-// Error handler
 app.use((err, req, res, next) => {
   console.error(err.stack);
   res.status(500).json({ error: "Something went wrong!" });
 });
 
-const PORT = process.env.PORT || 5000;
+const PORT = process.env.PORT || 8080;
 app.listen(PORT, () => console.log(`Server running on port ${PORT}`));
